--- a/config/install/core.entity_view_display.node.page.teaser.yml
+++ b/config/install/core.entity_view_display.node.page.teaser.yml
@@ -4,22 +4,60 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
+    - field.field.node.page.field_body_paragraph
+    - field.field.node.page.field_summary
     - node.type.page
   module:
+    - ds
     - text
     - user
+third_party_settings:
+  ds:
+    layout:
+      id: ds_1col
+      path: modules/contrib/ds
+      library: ''
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          ds_content: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      ds_content:
+        - node_title
+        - field_summary
+        - links
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h2
+          class: ''
 id: node.page.teaser
 targetEntityType: node
 bundle: page
 mode: teaser
 content:
-  body:
+  field_summary:
+    type: text_default
+    weight: 1
     label: hidden
-    type: text_summary_or_trimmed
-    weight: 100
-    settings:
-      trim_length: 600
+    settings: {  }
     third_party_settings: {  }
   links:
-    weight: 101
-hidden: {  }
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+hidden:
+  body: true
+  field_body_paragraph: true
