--- a/drutopia_page.info.yml
+++ b/drutopia_page.info.yml
@@ -1,4 +1,4 @@
-name: Drutopia Page
+name: 'Drutopia Page'
 description: 'Provides Basic page content type and related configuration. Use <em>basic pages</em> for your static content, such as an ''About us'' page.'
 type: module
 core: 8.x
