Add in user permissions.

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   "homepage": "https://gitlab.com/drutopia/drutopia_page",
   "minimum-stability": "dev",
   "require": {
+    "drupal/config_actions": "^1.0-beta1",
     "drupal/ctools": "^3.0",
     "drupal/ds": "^3.0-rc1",
     "drupal/pathauto": "^1.0",
