--- a/drutopia_page.info.yml
+++ b/drutopia_page.info.yml
@@ -3,6 +3,7 @@ description: 'Provides Basic page content type and related configuration. Use <e
 type: module
 core: 8.x
 dependencies:
+  - config_actions
   - drutopia_core
   - ds
   - entity_reference_revisions
