--- a/config/install/core.entity_view_display.node.page.default.yml
+++ b/config/install/core.entity_view_display.node.page.default.yml
@@ -4,10 +4,12 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_body_paragraph
+    - field.field.node.page.field_meta_tags
     - field.field.node.page.field_summary
     - node.type.page
   module:
     - ds
+    - metatag
     - user
 third_party_settings:
   ds:
@@ -31,7 +33,14 @@ id: node.page.default
 targetEntityType: node
 bundle: page
 mode: default
-content: {  }
+content:
+  field_meta_tags:
+    weight: 1
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
+    region: content
 hidden:
   body: true
   field_body_paragraph: true
