--- a/config/install/core.entity_form_display.node.page.default.yml
+++ b/config/install/core.entity_form_display.node.page.default.yml
@@ -4,9 +4,11 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_body_paragraph
+    - field.field.node.page.field_meta_tags
     - field.field.node.page.field_summary
     - node.type.page
   module:
+    - metatag
     - paragraphs
     - path
     - text
@@ -32,6 +34,12 @@ content:
       default_paragraph_type: text
     third_party_settings: {  }
     type: entity_reference_paragraphs
+    region: content
+  field_meta_tags:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
     region: content
   field_summary:
     weight: 1
