--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "require": {
     "drupal/config_actions": "^1.0-beta1",
     "drupal/ctools": "^3.0",
-    "drupal/drutopia_seo": "1.x-dev",
+    "drupal/drutopia_seo": "^1.0-alpha1",
     "drupal/ds": "^3.0-rc1",
     "drupal/pathauto": "^1.0",
     "drupal/token": "^1.0"
