Limit paragraph types plus cleanup

--- a/config/install/core.entity_view_display.node.page.default.yml
+++ b/config/install/core.entity_view_display.node.page.default.yml
@@ -9,14 +9,12 @@ dependencies:
     - node.type.page
   module:
     - ds
-    - metatag
     - user
 third_party_settings:
   ds:
     layout:
       id: ds_1col
-      path: modules/contrib/ds
-      library: ''
+      library: null
       disable_css: false
       entity_classes: all_classes
       settings:
@@ -33,16 +31,10 @@ id: node.page.default
 targetEntityType: node
 bundle: page
 mode: default
-content:
-  field_meta_tags:
-    weight: 1
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_empty_formatter
-    region: content
+content: {  }
 hidden:
   body: true
   field_body_paragraph: true
+  field_meta_tags: true
   field_summary: true
   links: true
