--- a/config/install/core.entity_view_display.node.page.full.yml
+++ b/config/install/core.entity_view_display.node.page.full.yml
@@ -5,6 +5,7 @@ dependencies:
     - core.entity_view_mode.node.full
     - field.field.node.page.body
     - field.field.node.page.field_body_paragraph
+    - field.field.node.page.field_meta_tags
     - field.field.node.page.field_summary
     - node.type.page
   module:
@@ -53,4 +54,5 @@ content:
     region: ds_content
 hidden:
   body: true
+  field_meta_tags: true
   field_summary: true
