--- a/config/install/core.entity_view_display.node.page.teaser.yml
+++ b/config/install/core.entity_view_display.node.page.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
     - field.field.node.page.field_body_paragraph
+    - field.field.node.page.field_meta_tags
     - field.field.node.page.field_summary
     - node.type.page
   module:
@@ -63,3 +64,4 @@ content:
 hidden:
   body: true
   field_body_paragraph: true
+  field_meta_tags: true
