--- a/config/install/field.field.node.page.field_body_paragraph.yml
+++ b/config/install/field.field.node.page.field_body_paragraph.yml
@@ -4,6 +4,11 @@ dependencies:
   config:
     - field.storage.node.field_body_paragraph
     - node.type.page
+    - paragraphs.paragraphs_type.file
+    - paragraphs.paragraphs_type.image
+    - paragraphs.paragraphs_type.slide
+    - paragraphs.paragraphs_type.text
+    - paragraphs.paragraphs_type.update
   module:
     - entity_reference_revisions
 id: node.page.field_body_paragraph
@@ -19,15 +24,27 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
-    target_bundles: null
+    negate: 0
+    target_bundles:
+      text: text
+      image: image
+      file: file
+      slide: slide
+      update: update
     target_bundles_drag_drop:
       text:
-        weight: -7
-        enabled: false
+        enabled: true
+        weight: -11
       image:
-        weight: -7
-        enabled: false
+        enabled: true
+        weight: -10
       file:
+        enabled: true
+        weight: -9
+      slide:
+        enabled: true
+        weight: -8
+      update:
+        enabled: true
         weight: -7
-        enabled: false
 field_type: entity_reference_revisions
