--- a/config/install/field.field.node.page.field_body_paragraph.yml
+++ b/config/install/field.field.node.page.field_body_paragraph.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - field.storage.node.field_body_paragraph
     - node.type.page
+    - paragraphs.paragraphs_type.faq
     - paragraphs.paragraphs_type.file
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.slide
@@ -31,6 +32,7 @@ settings:
       file: file
       slide: slide
       update: update
+      faq: faq
     target_bundles_drag_drop:
       text:
         enabled: true
@@ -47,4 +49,13 @@ settings:
       update:
         enabled: true
         weight: -7
+      faq:
+        enabled: true
+        weight: 9
+      storyline_header:
+        weight: 13
+        enabled: false
+      storyline_item:
+        weight: 14
+        enabled: false
 field_type: entity_reference_revisions
