--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
     "name": "drupal/drutopia_page",
     "description": "Drutopia Page is a base feature providing a page content type and related configuration.",
+    "keywords": ["pages", "content", "drutopia"],
     "type": "drupal-module",
     "license": "GPL-2.0+",
     "homepage": "https://gitlab.com/drutopia/drutopia_page",
     "minimum-stability": "dev",
+    "support": {
+        "issues": "https://gitlab.com/drutopia/drutopia_page/issues",
+        "source": "https://gitlab.com/drutopia/drutopia_page/tree/8.x-1.x"
+    },
     "require": {
         "drupal/config_actions": "^1.0-beta1",
         "drupal/ctools": "^3.0",
